WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
160687
[Win] Warning fix.
https://bugs.webkit.org/show_bug.cgi?id=160687
Summary
[Win] Warning fix.
Per Arne Vollan
Reported
2016-08-09 05:28:14 PDT
We currently get many warnings like these: 1>C:\Projects\WebKit\OpenSource\Source\WebCore\platform\spi\cf\CFNetworkSPI.h(174): warning C4273: 'CFURLResponseGetHTTPResponse': inconsistent dll linkage (compiling source file C:\Projects\WebKit\OpenSource\Source\WebCore\bindings\js\JSBindingsAllInOne.cpp) 1> C:\AppleApplicationSupport\AppleInternal\include\CFNetwork/CFURLResponse.h(268): note: see previous definition of 'CFURLResponseGetHTTPResponse' (compiling source file C:\Projects\WebKit\OpenSource\Source\WebCore\bindings\js\JSBindingsAllInOne.cpp)
Attachments
Patch
(2.22 KB, patch)
2016-08-09 06:07 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2016-08-09 06:07:22 PDT
Created
attachment 285635
[details]
Patch
Per Arne Vollan
Comment 2
2016-08-10 00:56:12 PDT
Thanks for reviewing :-)
WebKit Commit Bot
Comment 3
2016-08-10 01:19:31 PDT
Comment on
attachment 285635
[details]
Patch Clearing flags on attachment: 285635 Committed
r204329
: <
http://trac.webkit.org/changeset/204329
>
WebKit Commit Bot
Comment 4
2016-08-10 01:19:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug