[Win] Warning fix. https://bugs.webkit.org/show_bug.cgi?id=160687

Reviewed by Sam Weinig.

Avoid forward declarations with different dll linkage.

* platform/spi/cf/CFNetworkSPI.h:


Canonical link: https://commits.webkit.org/178843@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204329 268f45cc-cd09-0410-ab3c-d52691b4dbfc